SociaLite evaluation done

--- a/0introduction.tex
+++ b/0introduction.tex
@@ -65,6 +65,8 @@ If $f$ is a function $f: D \to D$ and $f(x) = x$ for an $x \in D$, then $x$ is c
 \end{defn}
 
 \todo{Powerset $\ps$}
+\todo{inst(sigma)}
+\todo{monotone}
 
 \begin{defn}
 
